- Bug Fix: truncate long translation strings in bottom google analytics reports - Bug Fix: rename query args to something more unique to avoid conflicts with other plugins - Bug Fix: throw an error in the Genera Settings screen (even if it's not a blocker) to acknowledge the user

--- a/admin/css/gadwp.css
+++ b/admin/css/gadwp.css
@@ -376,6 +376,9 @@ td.roles {
 	color: #777;
 	padding: 0px 5px 0px 5px;
 	margin: 0px 0px 0px 0px;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;	
 }
 
 .gadash-wrapper .inside .small-box p {
